@@ -1,3 +1,15 @@
+2011-05-03  Simon Fraser  <simon.fraser@apple.com>
+
+        Reviewed by Dan Bernstein.
+
+        <rdar://problem/9278296> Flicker zooming on Google Maps satellite view with accelerated compositing turned on
+
+        Conditionalize compositing tiled layer size-constraining logic to older
+        OSes.
+
+        * platform/graphics/ca/GraphicsLayerCA.cpp:
+        (WebCore::GraphicsLayerCA::constrainedSize):
+
 2011-05-03  Roland Steiner  <rolandsteiner@chromium.org>
 
         Reviewed by Dimitri Glazkov.
